<resources>
    <string name="app_name">Bitlab_resources_hw</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eslogan">Nos encanta que quieras aplicar a nuestras becas,
        pero antes de todo necesitamos conocerte más.</string>
    <string name="message">Tus datos han sido enviados con éxito</string>
    <string name="success">success</string>
    <string name="nombre_completo">Nombre completo:</string>
    <string name="correo">Correo:</string>
    <string name="numero_telef_nico">Numero telefónico:</string>
    <string name="como_te_enteraste_de_bitlab">Como te enteraste de Bitlab?</string>
    <string name="enviar">Enviar</string>
    <string name="ver_coleccion">Ver colección</string>
    <string name="agregar_nuevo_registro">Agregar nuevo registro</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="me_entero_po">Me entero por:</string>
    <string name="descripcion_de_la_imagen_que_se_cargara_desde_firebase">descripcion de la imagen que se cargara desde firebase</string>
    <string-array name="spinner">
        <item>Por redes sociales</item>
        <item>Un amigo me sugirío</item>
        <item>Otro</item>
    </string-array>
</resources>
