<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="31dp"
    android:layout_marginEnd="30dp"
    android:layout_marginTop="5dp"
    android:id="@+id/item_conteiner"
    android:background="@drawable/item_radius">


    <ImageView
        android:id="@+id/image_1"
        android:layout_width="142dp"
        android:layout_height="166dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/descripcion_de_la_imagen_que_se_cargara_desde_firebase"
        app:srcCompat="@drawable/image_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_nombre"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:fontFamily="@font/roboto"
            android:text="@string/nombre_completo"
            android:textColor="@color/blanco"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/correo_electronico"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_set_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:fontFamily="@font/roboto"
            android:text="@string/correo_electronico"
            android:textColor="@color/blanco"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_numero_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/numero_telef_nico"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_set_numero_tel"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:fontFamily="@font/roboto"
            android:text="@string/numero_telef_nico"
            android:textColor="@color/blanco"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_enterado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"

                android:text="@string/me_entero_po"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_set_enterado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="20dp"
                android:text="@string/me_entero_po"
                android:textColor="@color/blanco"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>